--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
 ### Django ###
-*.log
-*.pot
-*.pyc
-__pycache__/
+**/*.log
+**/*.pot
+**/*.pyc
+**/__pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
